Add history of statcast

--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -317,7 +317,7 @@ mead_shots |>
                 shot.technique.name, Y, shot.statsbomb_xg)
 ```
 Recall that XG quantifies a certain hypothetical long-term frequency of scoring a goal: if the shot was replayed under exactly the conditions quantified by the feature vector $\boldsymbol{\mathbf{x}}$, $\textrm{XG}(\boldsymbol{\mathbf{x}})$ is the proportion of times a goal is scored.
-So, according to StatsBomb's proprietary model, if Mead repeatedly attempted the three shots introduced in @sec-motivatino, we should expect them to result in goals 36%, 44%, and 9% of the time.
+So, according to StatsBomb's proprietary model, if Mead repeatedly attempted the three shots introduced in @sec-motivation, we should expect them to result in goals 36%, 44%, and 9% of the time.
 In other words, according to StatsBomb's model, Meads goal against Sweden is much more impressive than her goals against Austria and Norway.
 One could argue, further, that this goal was somewhat lucky.
 
