--- a/website/lectures/lecture03.qmd
+++ b/website/lectures/lecture03.qmd
@@ -9,7 +9,7 @@ execute:
 
 ## Overview {#sec-overview}
 
-In [Lecture 2](lectures02.qmd), we fit two very basic models for XG.
+In [Lecture 2](lecture02.qmd), we fit two very basic models for XG.
 The first used only body part to predict the probability of the shot resulting in a goal while the second used both body part and shot technique.
 By looking at a few of Beth Mead's shots from EURO 2022, we decided that the second model was a better because it assigned a higher XG to her one-on-one lob than the shot through multiple defenders.
 
