--- a/website/lectures/lecture09.qmd
+++ b/website/lectures/lecture09.qmd
@@ -640,6 +640,7 @@ We can further visualize the shrinkage effect by comparing the multiple linear r
 #| fig-width: 6
 #| fig-asp: 0.5625
 #| fig-align: center
+#| fig-cap: "There is much more variation in per-pass EPA among players with few pass attempts than among players with many attempts"
 
 alpha0_hat <- fixef(ml_fit_full)["(Intercept)"]
 par(mar = c(3,3,2,1), mgp = c(1.8, 0.5, 0))
