--- a/website/lectures/stat479_refs.bib
+++ b/website/lectures/stat479_refs.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Sameer Deshpande at 2025-08-12 20:22:30 -0500 
+%% Created for Sameer Deshpande at 2025-08-25 14:04:58 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{DeshpandeWyner2017,
+	author = {Sameer K. Deshpande and Abraham J. Wyner},
+	date-added = {2025-08-25 14:03:58 -0700},
+	date-modified = {2025-08-25 14:04:58 -0700},
+	doi = {10.1515/jqas-2017-0027},
+	journal = {Journal of Quantitative Analysis in Sports},
+	number = {3},
+	pages = {95--12},
+	title = {A hierarchical {Bayesian} model of pitch framing},
+	volume = {13},
+	year = {2017}}
 
 @article{DeshpandeJensen2016,
 	author = {Sameer K. Deshpande and Shane T. Jensen},
