Switch to lecture00

--- a/website/index.qmd
+++ b/website/index.qmd
@@ -38,8 +38,12 @@ Exceptions will not made to the formal course requisites.
 I will assume *fluency* with basic R functionality (e.g., assignment, writing and
 executing scripts, saving data objects, setting environments, installing and loading packages), data manipulation with **dplyr** and other **tidyverse** packages, and visualization using either base R graphics or **ggplot2**. 
 I will additionally assume some familiarity with fitting statistical models in R and interpreting their output (e.g., using `lm` and `glm`).
-[Here](lectures/lecture01.qmd) is an example of the type of R coding with which I will assume you are familiar.
-If you need a refresher on some of the data wrangling in that document, I **strongly** recommend reviewing your old course notes and the book [*R For Data Science*](https://r4ds.hadley.nz). 
+[Here](lectures/lecture00.qmd) is an example of the type of R coding with which I will assume you are familiar.
+If you need a refresher on some of the data wrangling in that document, I **strongly** recommend reviewing your old course notes as well as
+
+  * [Chapter 3](https://r4ds.hadley.nz/data-transform.html) and [Chapter 5](https://r4ds.hadley.nz/data-tidy.html) of [*R for Data Science*](https://r4ds.hadley.nz).
+  * [Section 1.9](https://datasciencebook.ca/intro.html#adding-and-modifying-columns-using-mutate) and [Chapter 3](https://datasciencebook.ca/wrangling.html) of [*Data Science: A First Introduction*](https://datasciencebook.ca). 
+
 
 ### Lectures {#sec-course-lectures}
 
@@ -135,7 +139,7 @@ We will often use this palette to annotate scatter plots (e.g., [this one in Lec
 #| fig-width: 5
 #| fig-height: 5
 #| fig-align: "center"
-#| fig-cap: "The 9 colors in the Okabe-Ito colorblind-friendly palette."
+#| fig-cap: The 9 colors in the Okabe-Ito colorblind-friendly palette.
 oi_colors <- 
   palette.colors(palette = "Okabe-Ito")
 par(mar = c(3,3,2,1), mgp = c(1.8, 0.5, 0)) #<1>
