--- a/website/lectures/lecture07.qmd
+++ b/website/lectures/lecture07.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Lecture 7: Wins Above Replacement I"
+title: "Lecture 7: Offensive Credit Allocation in Baseball"
 format: html
 execute: 
   cache: true
