--- a/website/lectures/lecture08.qmd
+++ b/website/lectures/lecture08.qmd
@@ -1,12 +1,12 @@
 ---
-title: "Lecture 8: Defensive credit & replacement level"
+title: "Lecture 8: Defensive Credit Allocation in Baseball"
 format: html
 execute: 
   cache: true
 ---
 
 
-## Overview
+## Overview {#sec-overview}
 
 [Last lecture](lecture07.qmd), we distributed the run value created in each at-bat between the batter and base runners. 
 Aggregating over all at-bats, we computed each player's $\textrm{RAA}^{\textrm{br}},$ which quantifies how much more run value a player created through his base running than would otherwise be expected based on the starting game states and ending events of the at-bats in which he was involved.
