--- a/website/lectures/lecture12.qmd
+++ b/website/lectures/lecture12.qmd
@@ -1,18 +1,30 @@
 ---
-title: "Ranking professional golfers"
+title: "Lecture 12: Power Rankings"
 format: html
 ---
 
-## Motivation
+## Overview
+
+## Scraping D1 Women's Hockey Results
 
 
-### Official World Golf Rankings
+## The Bradley-Terry Model
 
 
+### Fitting Bradley-Terry Models {#sec-bt-models}
+
+<!--
+  Yes, it is a GLM, but care needs to be taken
+  We often set a reference level
+-->
+
+#### The basic model {#sec-basic-bt}
 
 
+#### Home advantage {#sec-home-advantage}
 
-## A multi-level model
+## Simulation {#sec-simulation}
 
-
-
+<!--
+  Let's simulate the tournament!
+-->
