--- a/website/syllabus/stat479_f25_syllabus.tex
+++ b/website/syllabus/stat479_f25_syllabus.tex
@@ -28,7 +28,7 @@ University of Wisconsin--Madison
 
 \textbf{Instructor:} Sameer Deshpande. Office hours are Monday 11:00am - 12:00pm (Morgridge Hall 5586), Wednesday 4:00pm - 5:00pm (Morgridge Hall 5586), and Friday 3:00pm - 4:15pm (Morgridge Hall 3610). 
 
-\textbf{TA}: Zhexuan Liu. Office Hours Tuesdays and Thursdays 9:15am - 10:45am (Morgridge Hall 5683). 
+\textbf{TA}: Zhexuan Liu. Office hours are Tuesdays and Thursdays 9:15am - 10:45am (Morgridge Hall 5683). 
 
 \textbf{Requisites:} STAT 333 or 340. Details on assumed background are available below.
 
